# identity_reconciliation_service

./: .coveragerc  README.md  pyproject.toml  requirements.txt  setup.cfg
scripts/: fix_lint.sh  lint.sh  setup_db.sh  setup_db.sql  test.sh
src/: config.py  db.py  main.py
src/identify/: deps.py  model.py  router.py  schema.py  service.py
test/: test_health.py  test_identify.py
